# neural-network

./: CMakeLists.txt  README.md
src/: helper.hpp  layer.hpp  main.cpp
